# kvs-hs

./: .ghci  README.md  default.nix  kvs.cabal  shell.nix
.github/workflows/: build.yml
src/: BinIO.hs  CommitLog.hs  Kvs.hs  Main.hs  Memtable.hs  RBTree.hs  Segments.hs  Types.hs
test/: BinIOSpec.hs  CommitLogSpec.hs  Common.hs  Main.hs  MemtableSpec.hs  Orphans.hs  RBTreeSpec.hs  TestInstances.hs
