cabal-version: 2.2
name: kvs
version: 0.0.1
license: MIT
license-file: LICENSE
build-type: Simple

common com
  default-extensions:
    RecordWildCards
    OverloadedStrings
    DoAndIfThenElse
  build-depends:
    , base
    , text
    , bytestring

executable kvs
  import:
    com
  main-is:
    Kvs.hs
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  other-modules:
    Kvs
    CommitLog
    Memtable
    Segments
    Types
  build-depends:
    , mtl
    , concurrent-extra

test-suite test
  import:
    com
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  other-modules:
    RBTreeSpec
  hs-source-dirs:
    src
    test
  build-depends:
    , hspec
    , QuickCheck
    , quickcheck-instances
