cabal-version: 2.2
name: kvs
version: 0.0.1
license: MIT
license-file: LICENSE
build-type: Simple

common com
  other-modules:
    Kvs
    RBTree
    CommitLog
    Memtable
    Segments
    Types
  default-extensions:
    RecordWildCards
    OverloadedStrings
    DoAndIfThenElse
  build-depends:
    , base
    , text
    , bytestring
    , mtl
    , concurrent-extra

executable kvs
  import:
    com
  main-is:
    Main.hs
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  ghc-options:
    -Wall

test-suite test
  import:
    com
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  other-modules:
    Types
    RBTree
    RBTreeSpec
    TestInstances
  hs-source-dirs:
    src
    test
  build-depends:
    , hspec
    , QuickCheck
    , quickcheck-instances
