cabal-version: 2.2
name: kvs
version: 0.0.1
license: MIT
license-file: LICENSE
build-type: Simple

common com
  other-modules:
    Kvs
    RBTree
    CommitLog
    Memtable
    Segments
    Types
    BinIO
  default-extensions:
    RecordWildCards
    OverloadedStrings
    DoAndIfThenElse
  build-depends:
    , base
    , unix >= 2.7.1
    , text
    , binary
    , bytestring
    , mtl
    , concurrent-extra
  ghc-options:
    -Wall

executable kvs
  import:
    com
  main-is:
    Main.hs
  default-language:
    Haskell2010
  hs-source-dirs:
    src

test-suite test
  import:
    com
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  other-modules:
    Common
    RBTreeSpec
    MemtableSpec
    Orphans
  hs-source-dirs:
    test
    src
  build-depends:
    , hspec
    , QuickCheck
    , quickcheck-instances
